--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactclickdis",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/bluezam/reactclickdis",
+  "homepage": "https://bluezam.github.io/reactclickdis/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
